testsuite/tests/checks/quantified_expressions/test.out
expr.adb:7:7: error: quantified expression
7 |      (for some I in Ind =>                               --  FLAG
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

expr.adb:8:10: error: quantified expression
8 |         (for all J in Ind => M (I, J) = 0));             --  FLAG
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

